--- a/public/index.html
+++ b/public/index.html
@@ -10,9 +10,8 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
+    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=geometry,drawing,places&key=AIzaSyBKdvwvwRmuCY6PSCwBzWpVyD_xRRvvNRo"></script>
     <title>React App</title>
   </head>
   <body>
